# EasyLogger

./: .gitattributes  LICENSE  README.md
demo/non_os/stm32f10x/: README.md
demo/non_os/stm32f10x/EWARM/: .gitignore  EasyLogger.dep  EasyLogger.ewd  EasyLogger.ewp
demo/non_os/stm32f10x/RVMDK/: EasyLogger.uvopt  EasyLogger.uvproj  EasyLogger_stm32f103xE.dep  EasyLogger_uvopt.bak  EasyLogger_uvproj.bak  JLinkLog.txt
demo/os/cube-freertos/nucleo-g070rb/: .cproject  .mxproject  .project  README.md  STM32G070RBTX_FLASH.ld  nucleo-g070rb Debug.launch  nucleo-g070rb.ioc
demo/os/linux/: Makefile  README.md  main.c  make.sh
demo/os/nuttx-spiflash/: README.md
demo/os/rt-thread/: README.md
demo/os/rt-thread/EWARM/: EasyLogger.dep  EasyLogger.ewd  EasyLogger.ewp  EasyLogger.eww
demo/os/rt-thread/Libraries/: SConscript
demo/os/rt-thread/RVMDK/: .gitignore  (+6 more)
demo/os/windows/: .gitignore  CMakeLists.txt  README.md  main.c  make.bat
demo/os/windows/easylogger/inc/: elog_cfg.h  elog_file_cfg.h
demo/os/windows/easylogger/port/: elog_file_port.c  elog_port.c
docs/: readme.md
docs/en/: readme.md
docs/zh/: readme.md
docs/zh/api/: flash.md  kernel.md  readme.md
docs/zh/port/: flash.md  kernel.md  readme.md
easylogger/inc/: color.h  elog.h  elog_cfg.h  elog_flash.h
easylogger/plugins/file/: elog_file.c  elog_file.h  elog_file_cfg.h  elog_file_port.c
easylogger/plugins/flash/: elog_flash.c  elog_flash.h  elog_flash_cfg.h  elog_flash_port.c
easylogger/port/: elog_port.c
easylogger/src/: elog.c  elog_async.c  elog_buf.c  elog_flash.c  elog_utils.c
(+196 files in other folders)
